Refactor: Updated Security configs and static resources along with supressing warning for tomcat